force-app/main/default/objects/H8_Flow_Form__mdt/H8_Flow_Form__mdt.object-meta.xml
<CustomObject>
    <description>Metadata used to control tabs and determine the order of flows</description>
    <label>H8 Flow Form</label>
    <pluralLabel>H8 Flow Forms</pluralLabel>
</CustomObject>