force-app/main/default/objects/H8_Flow_Form__mdt/fields/MasterObject__c.field-meta.xml
<CustomField>
    <fullName>MasterObject__c</fullName>
    <inlineHelpText>Select the master object that this form is associated with, this is used to support with dynamic / live validations to reduce the amount of manual configuration required within the flow</inlineHelpText>
    <label>Master Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>H8_Flow_Forms</relationshipLabel>
    <relationshipName>H8_Flow_Forms</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>