force-app/main/default/objects/H8_Flow_Form__mdt/fields/Validation_Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Validation_Flow_API_Name__c</fullName>
    <label>Validation Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>